tests/negative/Test2.sp
(* Testing semicolon is mandatory *)
a